crates/rome_cli/tests/snapshots/main_commands_ci/max_diagnostics.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks
  


```

# Emitted Messages

```block
Checked 60 file(s) in <TIME>
```


